# mat2str

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exampleMain-basic.cpp  exampleMain-ext.cpp  mat2str-glm.h
mat2str/: mat2str-cout.h  mat2str-linalg.h  mat2str.h
